login, cadastro e validate

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
-<%- include("./partials/head.ejs") %>
+<%- include("./parciais/head.ejs") %>
 
-<%- include("./partials/nav.ejs") %>
+<%- include("./parciais/nav.ejs") %>
 
 <body>
-    <h1>Teste</h1>
+    <h1 class="text-center mt-5">Web for Test</h1>
 </body>
