--- a/views/parciais/nav.ejs
+++ b/views/parciais/nav.ejs
@@ -1,19 +1,20 @@
-<body>
-    <nav class="navbar navbar-light bg-light border-bottom justify-content-between flex-column flex-lg-row sticky-top">
-      <div class="d-flex">
-        <h3>Slogan</h3><span>Test</span>
-      </div>  
-      <div class="navbar-top-wrap">
-          <ul class="nav nav-header">
-            <li class="nav-item active"><a href="/" class="nav-link">Home</a></li>
-            <li class="nav-item"><a href="/user/cadastro" class="nav-link">Cadastrar</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Services</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Products</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">About us</a></li>
-          </ul>
-        </div>
-        <div>
-          <a class="btn btn-outline-success me-3" role="button" href="/login">Login</a>
-        </div>
-      </nav>
-</body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand">Navbar</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <div class="text-center">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">About us</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Products</a></li>
+          <li class="nav-item"><a class="nav-link" href="/user/cadastro">Sing Up</a></li>
+          <a class="btn btn-outline-success" type="button" href="/login">login</a>
+        </ul>
+      </div>
+    </div>    
+  </div>
+</nav>
