--- a/views/users/authentic.ejs
+++ b/views/users/authentic.ejs
@@ -1,3 +1,21 @@
+<%- include("../parciais/head.ejs") %>
+
 <body>
-    <h1>Seja bem vindo <%- nome %>!</h1>
+    <nav class="navbar navbar-light bg-light">
+        <div class="container-fluid">
+            <div class="dropdown d-flex">
+                <a class="rounded-circle center d-block mx-auto" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false" href="#"><img src="uploads/<%- image %>" style="width: 100px;height: 100px;" class="rounded-circle center d-block mx-auto"/></a><a href="/logout">Logout</a>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                    <li><a href="/services" class="dropdown-item">Edit your profile</a></li>
+                </ul>
+            </div>
+        </div>
+      </nav>
+    <div class="row justify-content-center">
+        <div class="col-auto">
+            <h1 class="text-center">Seja bem vindo <%- nome %>!</h1>
+            <p>Este é seu perfil, aqui você vai ter todas as informações de sua conta.</a></p>
+        </div>
+    </div>
+
 </body>
