Adicionando estilizaçoes adicionais

--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,20 +1,21 @@
 <%- include("../parciais/head.ejs") %>
-<%- include("../parciais/nav.ejs") %>
 
 <body>
-    <form class="container mt-4" method="POST" action="/logar">
-        <div class="mb-3">
-            <label for="email" class="form-label">Endereço de Email</label>
-            <input type="email" class="form-control" id="email" aria-describedby="emailHelp" name="email"/>
-        </div>
-        <div class="mb-3">
-            <label for="password" class="form-label">Password</label>
-            <input type="password" class="form-control" id="password" name="password">
-        </div>
-        <div class="mb-3 form-check">
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <label class="form-check-label" for="exampleCheck1">Check me out</label>
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
+    <div class="card position-absolute top-50 start-50 translate-middle">
+        <form class="card-body mt-4" method="POST" action="/logar">
+            <div class="mb-3">
+                <label for="email" class="form-label">Endereço de Email</label>
+                <input type="email" class="form-control" id="email" aria-describedby="emailHelp" name="email" placeholder="Insert your email here!"/>
+            </div>
+            <div class="mb-3">
+                <label for="password" class="form-label">Password</label>
+                <input type="password" class="form-control" id="password" name="password" placeholder="Insert your password here!">
+            </div>
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                <label class="form-check-label" for="exampleCheck1">Check me out</label>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+    </div>
 </body>
