--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
 
 <body>
     <h1 class="text-center mt-5">Web for Test</h1>
-    <div class="container bg-dark mt-2">
+    <div class="container mt-2">
         <section class="my-5 py-5">
             <div class="row">
                 <div class="col-md-4 mt-2 col-sm-6 col-lg-3">
