--- a/views/users/authentic.ejs
+++ b/views/users/authentic.ejs
@@ -4,18 +4,22 @@
     <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
             <div class="dropdown d-flex">
-                <a class="rounded-circle center d-block mx-auto" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false" href="#"><img src="uploads/<%- image %>" style="width: 100px;height: 100px;" class="rounded-circle center d-block mx-auto"/></a><a href="/logout">Logout</a>
+                <a class="rounded-circle center d-block mx-auto navbar-brand" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false" href="#">
+                    <img src="uploads/<%- image %>" style="width: 100px;height: 100px;" class="rounded-circle center d-block mx-auto"/>
+                </a>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                     <li><a href="/services" class="dropdown-item">Edit your profile</a></li>
                 </ul>
             </div>
-        </div>
+            <div class="row justify-content-center">
+                <div class="col-auto">
+                    <h1 class="text-center">Seja bem vindo, <%- nome %>!</h1>
+                    <p>Este é seu perfil, aqui você vai ter todas as informações de sua conta.</a></p>
+                </div>
+            </div>
+            <div class="me-2">
+                <a type="button" class="btn border text-dark nav-link" href="/logout">Logout</a>
+            </div>
+        </div>        
       </nav>
-    <div class="row justify-content-center">
-        <div class="col-auto">
-            <h1 class="text-center">Seja bem vindo <%- nome %>!</h1>
-            <p>Este é seu perfil, aqui você vai ter todas as informações de sua conta.</a></p>
-        </div>
-    </div>
-
 </body>
