--- a/views/parciais/nav.ejs
+++ b/views/parciais/nav.ejs
@@ -11,10 +11,12 @@
           <li class="nav-item"><a class="nav-link" href="#">About us</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Products</a></li>
-          <li class="nav-item"><a class="nav-link" href="/user/cadastro">Sing Up</a></li>
-          <a class="btn btn-outline-success" type="button" href="/login">login</a>
         </ul>
       </div>
-    </div>    
+    </div>  
+    <div class="me-3">
+      <a class="btn btn-outline-success" type="button" href="/login">login</a>
+      <a class="btn btn-outline-primary" type="button" href="/user/cadastro">Sing Up</a>
+    </div>  
   </div>
 </nav>
