--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -16,6 +16,7 @@
                 <label class="form-check-label" for="exampleCheck1">Check me out</label>
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
+            <a class="btn btn-danger" type="button" href="/">Cancel</a>
         </form>
     </div>
 </body>
