Adicionando atualizacao de perfil

--- a/views/parciais/upload.ejs
+++ b/views/parciais/upload.ejs
@@ -1,10 +1,17 @@
 <%- include('../parciais/head.ejs') %>
 
-<h1>Upload de Imagem</h1>
-<div class="mb-3">
-    <form enctype="multipart/form-data" action="/services" method="post" class="mb-3">
-        <label for="formFile" class="form-label">Insert the photo you want as a profile</label>
-        <input class="form-control" type="file" name="img" id="formFile">
-        <button class="btn btn-primary bottom mt-4" type="submit">Send picture</button>
-    </form>
-  </div>
+<div class="card position-absolute top-50 start-50 translate-middle mb-3">
+    <div class="container">
+        <img src="uploads/<%- image %>" style="width: 100px;height: 100px;" class="rounded-circle center d-block mx-auto mt-2"/>
+    </div>
+    <div class="card-body">
+        <h1>Upload de Imagem</h1>
+        <form enctype="multipart/form-data" action="/upload" method="post" class="mb-3">
+            <label for="formFile" class="form-label">Insert the photo you want as a profile</label>
+            <input class="form-control" type="file" name="img" id="formFile">
+            <button class="btn btn-primary bottom mt-4" type="submit">Send picture</button>
+            <a href="/authentic" class="btn btn-danger mt-4" type="button">Voltar</a>
+        </form>
+        
+    </div>    
+</div>
