--- a/views/users/authentic.ejs
+++ b/views/users/authentic.ejs
@@ -8,7 +8,7 @@
                     <img src="uploads/<%- image %>" style="width: 100px;height: 100px;" class="rounded-circle center d-block mx-auto"/>
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                    <li><a href="/services" class="dropdown-item">Edit your profile</a></li>
+                    <li><a href="/upload" class="dropdown-item">Edit your profile</a></li>
                 </ul>
             </div>
             <div class="row justify-content-center">
@@ -22,4 +22,7 @@
             </div>
         </div>        
       </nav>
+
+      <%- include('../parciais/body.ejs') %>
+
 </body>
