--- a/views/users/cadastrar.ejs
+++ b/views/users/cadastrar.ejs
@@ -2,21 +2,25 @@
 <%- include("../parciais/nav.ejs") %>
 
 <body>
-    <form class="container mt-4" action="/cadastro" method="POST">
-        <div class="mb-3">
-            <label for="name" class="form-label">Nome de Usuário</label>
-            <input type="text" class="form-control" id="nome" name="nome" aria-describedby="nametest" />
+    <div class="card position-absolute top-50 start-50 translate-middle" style="width: 25rem;">
+        <div class="card-body">
+            <form class="container mt-4" action="/cadastro" method="POST">
+                <div class="mb-3">
+                    <label for="name" class="form-label">Nome de Usuário</label>
+                    <input type="text" class="form-control" id="nome" name="nome" aria-describedby="nametest" />
+                </div>
+                <div class="mb-3">
+                    <label for="email" class="form-label">Endereço de Email</label>
+                    <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp"/>
+                </div>
+                <div class="mb-3">
+                    <label for="password" class="form-label">Password</label>
+                    <input type="password" class="form-control" id="password" name="password">
+                </div>
+                <div class="row"><button id="btnCad" type="submit" class="col-6 mx-auto btn btn-primary" style="width: 50%;" onclick="cad()">Submit</button></div>
+            </form>
         </div>
-        <div class="mb-3">
-            <label for="email" class="form-label">Endereço de Email</label>
-            <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp"/>
-        </div>
-        <div class="mb-3">
-            <label for="password" class="form-label">Password</label>
-            <input type="password" class="form-control" id="password" name="password">
-        </div>
-        <button id="btnCad" type="submit" class="btn btn-primary">Submit</button>
-    </form>
+    </div>
 </body>
 
 <script>
