Adicionando novas funcionalidades

--- a/views/parciais/body.ejs
+++ b/views/parciais/body.ejs
@@ -1,19 +1,29 @@
 <body>
-    <h1 class="text-center mt-5">Web for Test</h1>
+    <h1 class="text-center mt-5">Nossas Delícias</h1>
     <div class="container mt-2">
         <section class="my-5 py-5">
             <div class="row">
                 <div class="col-md-4 mt-2 col-sm-6 col-lg-3">
-                    <div class="p-3 border bg-light"><img src="./assets/empadao.png" class="img-thumbnail" /></div>
+                    <div class="p-3 border bg-light">
+                        <img src="./assets/empadao.png" class="img-thumbnail" />
+                        <h3>Empadão de Frango</h3>
+                        <a href="#" class="btn btn-success col-12 mt-3">Carrinho</a>
+                    </div>
                 </div>
                 <div class="col-md-4 mt-2 col-sm-6 col-lg-3">
-                    <div class="p-3 border bg-light"><img src="assets/empadao.png" class="img-thumbnail" /></div>
+                    <div class="p-3 border bg-light"><img src="assets/empadao.png" class="img-thumbnail" />
+                        <a href="#" class="btn btn-success col-12 mt-3">Carrinho</a>
+                    </div>
                 </div>
                 <div class="col-md-4 mt-2 col-sm-6 col-lg-3">
-                    <div class="p-3 border bg-light"><img src="assets/empadao.png" class="img-thumbnail" /></div>
+                    <div class="p-3 border bg-light"><img src="assets/empadao.png" class="img-thumbnail" />
+                        <a href="#" class="btn btn-success col-12 mt-3">Carrinho</a>
+                    </div>
                 </div>
                 <div class="col-md-4 mt-2 col-sm-6 col-lg-3">
-                    <div class="p-3 border bg-light"><img src="assets/empadao.png" class="img-thumbnail" /></div>
+                    <div class="p-3 border bg-light"><img src="assets/empadao.png" class="img-thumbnail" />
+                        <a href="#" class="btn btn-success col-12 mt-3">Carrinho</a>
+                    </div>
                 </div>
             </div>
         </section>
