Adicionando foto dinamicamente

--- a/views/parciais/upload.ejs
+++ b/views/parciais/upload.ejs
@@ -2,7 +2,7 @@
 
 <div class="card position-absolute top-50 start-50 translate-middle mb-3">
     <div class="container">
-        <img src="uploads/<%- image %>" style="width: 100px;height: 100px;" class="rounded-circle center d-block mx-auto mt-2"/>
+        <img src="<%- foto %>" style="width: 100px;height: 100px;" class="rounded-circle center d-block mx-auto mt-2"/>
     </div>
     <div class="card-body">
         <h1>Upload de Imagem</h1>
