--- a/views/users/authentic.ejs
+++ b/views/users/authentic.ejs
@@ -5,7 +5,7 @@
         <div class="container-fluid">
             <div class="dropdown d-flex">
                 <a class="rounded-circle center d-block mx-auto navbar-brand" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false" href="#">
-                    <img src="uploads/<%- image %>" style="width: 100px;height: 100px;" class="rounded-circle center d-block mx-auto"/>
+                    <img src="<%- foto %>" style="width: 100px;height: 100px;" class="rounded-circle center d-block mx-auto"/>
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                     <li><a href="/upload" class="dropdown-item">Edit your profile</a></li>
